gccida/c3/init_propagate_block_info
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/flow.c:2270:4: error: expected ';' after expression
rtx v19; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/flow.c:2270:5: error: use of undeclared identifier 'v19'
rtx v19; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/flow.c:2272:4: error: expected ';' after expression
rtx v21; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/flow.c:2272:5: error: use of undeclared identifier 'v21'
rtx v21; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/flow.c:2276:4: error: expected ';' after expression
rtx next; // [rsp+0h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/flow.c:2276:5: error: use of undeclared identifier 'next'
rtx next; // [rsp+0h] [rbp-38h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/flow.c:2290:28: error: expected expression
v10->reg_next_use = ( rtx *)xcalloc( v11, 8uLL); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/flow.c:2312:1: error: use of undeclared identifier 'next'
next = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/flow.c:2317:13: error: expected ';' after expression
v17 = ( rtx)end[2]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/flow.c:2319:34: error: expected expression
v17 = single_set_2( end, *( rtx *)&end[2]); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/flow.c:2325:1: error: use of undeclared identifier 'v19'
v19 = canon_rtx( rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/flow.c:2326:20: error: use of undeclared identifier 'v19'
if ( ( *( _DWORD *)v19 & 0x4000000) == 0 ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/flow.c:2328:24: error: use of undeclared identifier 'v19'
v20.rtwint = ( __int64)v19->fld[0]; 
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/flow.c:2331:12: error: expected expression
&& *( rtx *)( v20.rtwint + 8) == global_rtl[3] 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/flow.c:2333:18: error: use of undeclared identifier 'v19'
&& ( *( _DWORD *)v19 & 0xFF0000) != 3342336 ) 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/flow.c:2335:6: error: use of undeclared identifier 'next'
if ( next ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/flow.c:2337:1: error: use of undeclared identifier 'v21'
v21 = next; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/flow.c:2337:7: error: use of undeclared identifier 'next'
v21 = next; 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/flow.c:2338:24: error: use of undeclared identifier 'next'
v22.rtwint = ( __int64)next->fld[0]; 
                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_propagate_block_info/src/obj/flow.o] Error 1
